// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Pagination Dev 1`] = `
<div
  className="fd-pagination"
>
  <span
    className="fd-pagination__total"
  >
    200
     
    items
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      4
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      5
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      6
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      7
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      8
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      9
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      10
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      12
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      13
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      14
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      15
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      16
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      17
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      18
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      19
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      20
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Hide Total Items Pagination 1`] = `
<div
  className="fd-pagination"
>
  
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <span
      className="fd-pagination__link--more"
    />
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Initial Set Pagination 1`] = `
<div
  className="fd-pagination"
  initalPage={5}
>
  <span
    className="fd-pagination__total"
  >
    101
     
    items
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <span
      className="fd-pagination__link--more"
    />
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Items Per Page Pagination 1`] = `
<div
  className="fd-pagination"
>
  <span
    className="fd-pagination__total"
  >
    101
     
    items
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <span
      className="fd-pagination__link--more"
    />
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      5
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Items Per Page Zero Pagination 1`] = `
<div
  className="fd-pagination"
>
  <span
    className="fd-pagination__total"
  >
    101
     
    items
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <span
      className="fd-pagination__link--more"
    />
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination No Styles 1`] = `
<div
  className="xxx-pagination"
>
  <span
    className="xxx-pagination__total"
  >
    101
     
    items
  </span>
  <nav
    className="xxx-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="xxx-pagination__link xxx-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="xxx-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="xxx-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="xxx-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <span
      className="xxx-pagination__link--more"
    />
    <a
      className="xxx-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="xxx-pagination__link xxx-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Primary 1`] = `
<div
  className="fd-pagination"
>
  <span
    className="fd-pagination__total"
  >
    101
     
    items
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <span
      className="fd-pagination__link--more"
    />
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Total Text Pagination 1`] = `
<div
  className="fd-pagination"
>
  <span
    className="fd-pagination__total"
  >
    101
     
    Dalmations
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <span
      className="fd-pagination__link--more"
    />
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Visible Total Pages Pagination 1`] = `
<div
  className="fd-pagination"
>
  <span
    className="fd-pagination__total"
  >
    221
     
    items
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      4
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      5
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      6
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      7
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      8
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      9
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      10
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      12
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      13
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      14
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      15
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      16
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      17
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      18
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      19
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      20
    </a>
    <span
      className="fd-pagination__link--more"
    />
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      23
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Visible Total Pages With Item Total Pagination 1`] = `
<div
  className="fd-pagination"
>
  <span
    className="fd-pagination__total"
  >
    10
     
    items
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      4
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      5
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      6
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      7
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      8
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      9
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      10
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;

exports[`Storyshots Component API/Pagination Visible Total Pages Zero Pagination 1`] = `
<div
  className="fd-pagination"
>
  <span
    className="fd-pagination__total"
  >
    200
     
    items
  </span>
  <nav
    className="fd-pagination__nav"
  >
    <a
      aria-disabled={true}
      aria-label="Previous"
      className="fd-pagination__link fd-pagination__link--previous"
      href="#"
      onClick={[Function]}
    />
    <a
      className="fd-pagination__link is-selected"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      4
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      5
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      6
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      7
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      8
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      9
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      10
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      11
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      12
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      13
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      14
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      15
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      16
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      17
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      18
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      19
    </a>
    <a
      className="fd-pagination__link"
      href="#"
      onClick={[Function]}
    >
      20
    </a>
    <a
      aria-disabled={false}
      aria-label="Next"
      className="fd-pagination__link fd-pagination__link--next"
      href="#"
      onClick={[Function]}
    />
  </nav>
</div>
`;
